<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="com.laurent_julien_nano_degree_project.bakingrecipes.binding_adapter.RecipeNameBindingAdapter"/>
        <import type="java.util.List"/>
        <import type="com.laurent_julien_nano_degree_project.bakingrecipes.model.Recipe"/>

        <variable
            name="recipes"
            type="List&lt;Recipe>"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recipe_name_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:recipelist="@{recipes}"/>
    </LinearLayout>
</layout>