...
    <string name="warning">Warning</string>
    <string name="no_connection">No internet connnection</string>
    <string name="ok">OK</string>
    <string name="description">Description</string>
    <string name="state_save">state_save</string>
    <string name="go_to_previous_step">Previous</string>
    <string name="go_to_next_step">Up next</string>
    <string name="yellow_cake">Yellow Cake</string>
    <string name="url_to_query">https://d17h27t6h515a5.cloudfront.net/topher/2017/May/59121517_baking/baking.json</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="no_ingredient_added_yet">No Ingredient added yet</string>
    <string name="add_to_home_screen">Add to widget</string>
    <string name="title_activity_main2">MainActivity2</string>
...
