...
                    android:layout_height="wrap_content"
                    app:setIngredients="@{ingredients}"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recipe_name_details_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:setRecipeStep="@{steps}"/>
    </LinearLayout>
</layout>
